ReporteRs 0.8.5
==================================================================

ENHANCEMENT
------------------------------------------------------------------

* pptx shapes inherits visual properties with addParagraph
* some help files have been rewritten
* FlexTable and pot now have their knitr_print method

ReporteRs 0.8.4
==================================================================

ENHANCEMENT
------------------------------------------------------------------

* package rvg support raster function.
* Word TOC can now display from one to nine level of
  titles (suggested by Elena Salette).

DEBUG
------------------------------------------------------------------

* Graphics Devices have been dropped, package rvg is now producing
  the graphics. It solves issue #91.

ReporteRs 0.8.3
==================================================================

ENHANCEMENT
------------------------------------------------------------------

* new mathjax option fo bsdoc objects (proposed by David Hajage)

ReporteRs 0.8.2
==================================================================

ENHANCEMENT
------------------------------------------------------------------

* new function as.HTML for bsdoc objects. It return the raw HTML of
  a bsdoc document. (suggested by Tyler Beason)

* new functions to let make the plot interactive when graphical
  device is 'raphael'.

* function raphael.html now returns a list with javascript instructions,
  HTML code and id values.

DEBUG
------------------------------------------------------------------

* fix an encoding issue in pptx with bullets (reported by Jonathan
  Oxborrow)

* fix an issue with NA values in FlexTable (reported by Vadim
  Bondarenko)

* the package is now configured so that headless mode is always true.

ReporteRs 0.8.1
==================================================================

ENHANCEMENT
------------------------------------------------------------------

* add CodeBlock for vertabim output
